Fix menu scrolling and spacing

--- a/styles/catalog.css
+++ b/styles/catalog.css
@@ -281,7 +281,7 @@ p.merchants a:visited b.merchant img {
 }
 
 #menu {
-	position: fixed; float: left; width: 25%; height: 100%;
+	position: fixed; float: left; width: 25%; height: 100%; overflow-y: auto;
 	background: #555;
 	border-right: solid 2px #444;
 	font-family: "Arial Black", helvetica, arial, sans-serif;
@@ -326,19 +326,23 @@ p.merchants a:visited b.merchant img {
 */
 
 #menu a.active {
+	margin-bottom: -1px;
 	border-bottom: solid 2px #fff;
 	color: #fff;
 }
 
+/*
 #menu a.aisle {
 	margin-left: 20px;
 	text-transform: none;
 }
 
+
 #menu a.product {
 	margin-left: 40px;
 	text-transform: none;
 }
+*/
 
 /*
 p.nav {
